@@ -71,6 +71,7 @@ since 1999.  If I missed your name, let me know.
 * Mark DeTrano
 * Thomas Dohl
 * Mike Dorman
+* Albrecht Dress
 * Alok Dubey
 * Jim Dumser
 * Thomas Dunkel
@@ -79,6 +80,7 @@ since 1999.  If I missed your name, let me know.
 * Matthias Eichler
 * Rob Enders
 * Andreas Ericsson
+* Matt Ezell
 * Sylvain Falardeau
 * Duncan Ferguson
 * Sean Finney
