@@ -13,7 +13,7 @@
         .PageTitle { font-family: verdana,arial,serif; font-size: 16pt; font-weight: bold; text-align: center;}
 		
         .Trademark { font-family: verdana,arial,serif; font-size: 7ptl; }
-        .Copyright { font-family: verdana,arial,serif; font-size: 10pt; text-align: center; }
+        .Copyright { font-family: verdana,arial,serif; font-size: 8pt; text-align: center;  margin: 0 0 25px 0;}
         .LastUpdate { font-family: verdana,arial,serif; font-size: 10pt; text-align: center; }
         .HomePageLink { font-family: verdana,arial,serif; font-size: 10pt; text-align: center; font-weight: bold; }
 
@@ -40,10 +40,12 @@ Nagios Version 3.x Documentation
 </p>
 
 <div class="Copyright">
-Copyright &copy; 1999-2008 Ethan Galstad<br>
+Copyright &copy; 1999-2009 Ethan Galstad.<br>
+Portions copyright by Nagios Community members.<br>
+See the THANKS file for more information.
 </div>
 <div class="LastUpdate">
-Last Updated: 11-30-2008
+Last Updated: 01-15-2009
 </div>
 
 
