@@ -12,7 +12,9 @@ Nagios 3.x Change Log
 * Fixed bug in logging event handlers
 * Fix to prevent debug output from being shown when Nagios is compiled with embedded Perl interpreter
 * Fix for CPU hogging issues on OpenBSD
-
+* Fix to RPM spec file for sample configuration files
+* Fix for bug in time calculation routines that could cause notification, reporting, and check scheduling anomalies
+* Fix for scheduling forced service checks from web interface
 
 
 3.0.6 - 12/01/2008
